--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
     <div class="container">
         <h1>Algorithm Project Hub</h1>
         <div class="links">
-            <a href="Ring-Cascade_demo.html">View Circle Permutation Demo</a>
-            <a href="triple_process_reducecomplex.html" class="secondary">View Triple Process Analysis</a>
+            <a href="Ring-Cascade_demo.html">View Ring-Cascade-Permutation-Algorithm basic Demo</a>
+            <a href="triple_process_reducecomplex.html" class="secondary">View Speed Triple Process Analysis</a>
         </div>
         <footer>
             Project: Ring-Cascade-Permutation-Algorithm<br>
@@ -82,5 +82,6 @@
         </footer>
     </div>
 </body>
+
 
 </html>
